<resources>
    <string name="app_name">SportApp</string>
    <string name="facebook_app_id">147279152570470</string>
    <string name="fb_login_protocol_scheme">fb147279152570470</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_information_group">Information</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_manage_group">Manage</string>
    <string name="nav_football">Football</string>
    <string name="nav_sport_group">Sports</string>
    <string name="auth_failed">Authentication failed, try again!</string>
    <string name="nav_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name_title">Name</string>
    <string name="profile_descrption_title">Description</string>
    <string name="profile_email_title">E-mail</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="search_hint">Search players</string>
    <string name="app_label">SportApp</string>
    <string name="no_data_available">No data available</string>
    <string name="no_players_available">No players available</string>
    <string name="no_rooms_available">No rooms available</string>
    <string name="no_seasons_available">No seasons available</string>


</resources>
