<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_sport_group"
        android:checkableBehavior="none">
        <menu>
            <item
                android:id="@+id/nav_football"
                android:icon="@drawable/ball_24"
                android:title="@string/nav_football" />
        </menu>
    </item>

    <item android:title="@string/nav_manage_group"
        android:checkableBehavior="none">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_24"
                android:title="@string/nav_logout"/>
        </menu>
    </item>

</menu>
